IE 11 style adjustments for address section.  Need to override addressing stylesheets so fields wrap correctly.

--- a/web/themes/custom/hm-public-theme/static/sass/shared/forms/_check-out.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/forms/_check-out.scss
@@ -81,10 +81,14 @@
     flex-flow: row wrap;
 
     .form-item.form-item-shipping-information-shipping-profile-address-0-address-locality.form-type-textfield,
-    .form-item.form-item-shipping-information-shipping-profile-address-0-address-administrative-area.form-type-select {
-      min-width: 200px;
+    .form-item.form-item-shipping-information-shipping-profile-address-0-address-administrative-area.form-type-select,
+    .form-item.form-item-shipping-information-shipping-profile-address-0-address-postal-code {
+      display: flex !important;
+      flex: 1;
+      flex-flow: row wrap;
 
-      input {
+      input,
+      select {
         flex-basis: 100%;
       }
 
